feat: add endpoint order
